# webscraping_ros

./: CMakeLists.txt  package.xml
launch/: sample.launch
scripts/: display_yahoo_news_onterminal.py  get_fortune.py  get_place.py  get_tips.py  get_weather_forecast.py
srv/: GetFortune.srv
